Bug 416685: jsinterp.c warning: empty body in an if-statement (times 4). r=/a=brendan